maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:4: error: not found: value isDirectionFree
    while (isDirectionFree(Direction.NORTH))  {forward()}
           ^