maze.pledge.PledgeMaze.scala.code
override def run() {var anglesum:Int=0;
  while (!isOverBaggle) {
    while (isDirectionFree(Direction.NORTH))  {forward()}
    while(isFacingWall()) {right(); anglesum-=1}
		while ((!isFacingWall()) && (getDirection()!=Direction.NORTH))
    	{forward(); left(); anglesum=anglesum+1};
    
	}                 
right(); pickupBaggle()}







